--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qiu-qianye-portfolio",
+  "name": "terry.os-//-data-terminal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.554.0",
+    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
-    "@google/genai": "^1.30.0",
-    "framer-motion": "^12.23.24",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
